chore(tailwind-shadcn): Install and configure

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "run-p check-types \"build-only {@}\" --",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.7.2",
+    "@tailwindcss/vite": "^4.1.15",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^20.11.24",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -23,6 +25,7 @@
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-vue": "^9.22.0",
     "npm-run-all2": "^6.1.2",
+    "tailwindcss": "^4.1.15",
     "tsconfig": "workspace:*",
     "typescript": "5.5.4",
     "vite": "^5.1.4",
