--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,14 +2,29 @@
   "name": "ui",
   "version": "0.0.0",
   "private": true,
-  "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev:styles": "tailwindcss -i ./styles.css -o ./dist/index.css --watch",
+    "build:styles": "tailwindcss -i ./styles.css -o ./dist/index.css"
+  },
+  "exports": {
+    "./styles.css": "./dist/index.css",
+    ".": "./index.ts"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "vue": "^3.4.21"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.546.0",
+    "reka-ui": "^2.5.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.15",
+    "tw-animate-css": "^1.4.0"
   }
 }
