--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -10,11 +10,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "../../components",
-    "composables": "../../composables",
+    "components": "@/components",
+    "composables": "@/composables",
     "utils": "../../lib/utils",
-    "ui": "../../",
-    "lib": "../../lib"
+    "ui": "@/components/ui",
+    "lib": "@/lib"
   },
   "iconLibrary": "lucide"
 }
