--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,7 +4,7 @@
   "typescript": true,
   "tailwind": {
     "config": "",
-    "css": "src/styles.css",
+    "css": "src/styles/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
@@ -12,7 +12,7 @@
   "aliases": {
     "components": "@/components",
     "composables": "@/composables",
-    "utils": "../../lib/utils",
+    "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib"
   },
