--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.90.5",
+    "@vueuse/core": "^13.9.0",
+    "lucide-vue-next": "^0.546.0",
     "ui": "workspace:*",
     "vue": "^3.4.21"
   },
