--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "run-p check-types \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
