--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
-version: "3.8"
 services:
-  api:
-    build: ./apps/api
-    env_file:
-      - ./apps/api/.env
+  dev:
+    image: node:22
+    working_dir: /workspace
+    volumes:
+      - .:/workspace
+      - pnpm-store:/root/.local/share/pnpm/store/v3
+    environment:
+      PNPM_HOME: /root/.local/share/pnpm
+      PATH: /root/.local/share/pnpm:$PATH
+      CHOKIDAR_USEPOLLING: "1"
+      WATCHPACK_POLLING: "true"
+    command: >
+      sh -lc "
+        corepack enable &&
+        pnpm install &&
+        pnpm dev
+      "
     ports:
-      - "3010:3010"
-    restart: unless-stopped
-    depends_on:
-      - web
-  web:
-    build: ./apps/web
-    env_file:
-      - ./apps/web/.env
-    ports:
-      - "3000:3000"
-    restart: unless-stopped
-    depends_on:
-      - api
+      - "3000:3000" # client
+      - "3010:3010" # api
+
+volumes:
+  pnpm-store:
